Added /rooms router